--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="container">
         <h1 class="title">Connect 4
         </h1>
-        <span class="span-curr"><span class="span-player">Current Player</span></span><span class="currentPlayerDisplay"></span>
+        <span class="span-curr">
+            <span class="span-player">Current Player</span>
+        </span>
+        <span class="currentPlayerDisplay"></span>
         <div class="start-and-restart">
             <button id="restartBtn">Restart</button>
         </div>
